--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Dependencies
 node_modules/
+*/node_modules/
 
 # Build outputs
 dist/
-dist-ssr/
 build/
 *.tsbuildinfo
 
@@ -11,7 +11,6 @@ build/
 .env
 .env.local
 .env.*.local
-*.local
 
 # Logs
 logs/
@@ -26,6 +25,10 @@ lerna-debug.log*
 .DS_Store
 .DS_Store?
 ._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 *.swp
 *.swo
 *~
@@ -41,7 +44,15 @@ lerna-debug.log*
 *.njsproj
 *.sln
 
+# Database files
+*.db
+*.db-shm
+*.db-wal
+*.sqlite
+*.sqlite3
+
 # Temporary files
 *.tmp
 *.temp
 .cache/
+
