--- a/server/.gitignore
+++ b/server/.gitignore
@@ -3,7 +3,6 @@ node_modules/
 
 # Build outputs
 dist/
-dist-ssr/
 build/
 *.tsbuildinfo
 
@@ -11,7 +10,13 @@ build/
 .env
 .env.local
 .env.*.local
-*.local
+
+# Database files
+data/*.db
+data/*.db-shm
+data/*.db-wal
+*.sqlite
+*.sqlite3
 
 # Logs
 logs/
@@ -20,12 +25,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
 # OS files
 .DS_Store
-.DS_Store?
-._*
 *.swp
 *.swo
 *~
@@ -36,12 +38,9 @@ lerna-debug.log*
 .idea/
 *.sublime-project
 *.sublime-workspace
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
 
 # Temporary files
 *.tmp
 *.temp
 .cache/
+
